--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "carousel": "^0.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
+    "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
