--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-responsive-carousel": "^3.2.23",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
