--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.10"
   },
